Pending changes in the mainline
===============================

=> Minimum SDK version: 0.9.4 <=

* Support of images encoded using LUT (lookup tables)
* Use Orthanc's primitives for PNG and JPEG
* Fix for old versions of jQuery
* Fix possible deadlock with other plugins in OnChangeCallback()
* Upgrade to GDCM 2.6.0 for static builds


Version 1.2 (2015-08-02)
========================

=> Minimum SDK version: 0.9.1 <=

* Update to Boost 1.58.0 for static and Windows builds
* Inject version information into Windows binaries
* Support of OS X


Version 1.1 (2015-07-03)
========================

* Support of Visual Studio 2008
* Support of FreeBSD
* Fix issue 29 (support of photometric interpretation YBR_FULL_422)


Version 1.0 (2015-02-27)
========================

* Configuration options


2015-02-25
==========

* Initial release