@@ -8,6 +8,7 @@ Pending changes in the mainline
 * Fix for old versions of jQuery
 * Fix possible deadlock with other plugins in OnChangeCallback()
 * Upgrade to GDCM 2.6.0 for static builds
+* Upgrade to Boost 1.59.0 for static builds
 
 
 Version 1.2 (2015-08-02)
